# ignis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.worker  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
backend/: __init__.py  app.py  registry.py
docs/: deploy.md  nilm-imbalance.md  portfolio-contract.md
eval/: __init__.py  compare.py  drift.py  metrics.py  promote.py  truth.py
ha_ingest/: __main__.py  backfill.py  entities.py  store.py  subscriber.py  views.py
nilm/: config.py  seq2point_nilm.py
nilm/nilm/detectors/: change_point_detector.py
nilm/nilm/models/: multioutput_model.py
publish/: __init__.py  __main__.py  ha_discovery.py  live.py  mqtt_publisher.py
scripts/: cron-retrain.sh  diag_predict.py  ha_meross.py  ha_probe.py  smoke_train.py
src/ignis/: __init__.py
src/ignis/backend/: app.py  dbapi.py  registry.py
src/ignis/eval/: __main__.py  compare.py  metrics.py  promote.py  runlog.py  truth.py
src/ignis/ha_ingest/: __init__.py  backfill.py  entities.py  store.py  subscriber.py  views.py
src/ignis/nilm/: database.py  tasks.py
src/ignis/nilm/nilm/models/: multioutput_model.py
src/ignis/ops/: __init__.py  retrain.py
src/ignis/publish/: __main__.py  contract.py  ha_discovery.py  live.py  mqtt_publisher.py
src/ignis/training/: dataset.py  report.py  source.py  trainer.py
tests/: test_backend_api.py  test_backend_app.py  test_backfill.py  test_compare.py  test_contract.py  test_dataset.py  test_drift.py  test_entities.py  test_live.py  test_metrics.py  test_promote.py  test_publisher.py  test_registry.py  test_report.py  test_runlog.py  test_truth.py  test_views.py  test_windows.py
training/: __init__.py  __main__.py  source.py  trainer.py  windows.py
