[project]
name = "ignis"
version = "0.1.0"
description = "NILM/HA lab: Seq2Point disaggregation, HA ingest, diff/drift eval, publish."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.5",
    "loguru>=0.7",
    "aiomqtt>=2.3",
    "asyncpg>=0.30",
]

# Engine (TensorFlow/Keras) deps are intentionally NOT here: on the Pi they
# come from the inference Docker base image; training uses the [training] extra
# natively on macOS (Metal). See CLAUDE.md "Training is OFF-device".
[project.optional-dependencies]
engine = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.2",
    "numpy",
    "pandas",
]
training = [
    "tensorflow>=2.16",
    "numpy",
    "pandas",
    "scikit-learn",
]
# tensorflow-metal is the macOS GPU plugin. It lags TF releases and its
# prebuilt dylib often fails to dlopen against a newer tensorflow (the plugin
# auto-loads on `import tensorflow`, so a mismatch breaks even CPU). Keep it
# OPT-IN: install only with a TF version it actually supports. CPU training
# works without it -- correctness first, GPU speed is the optimisation.
metal = [
    "tensorflow-metal; sys_platform == 'darwin'",
]
backend = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120
target-version = "py312"
# Harvested engine is kept verbatim (migrate style as files are touched -- see
# CLAUDE.md). config.py was rewritten by us, so it is NOT excluded.
extend-exclude = [
    "src/ignis/nilm/database.py",
    "src/ignis/nilm/seq2point_nilm.py",
    "src/ignis/nilm/tasks.py",
    "src/ignis/nilm/nilm",
    # One-off recon scripts run on the HA container (not part of the package).
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ignis"]
